--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,6 @@ dynamic = ["version", "description"]
 dependencies = [
   'rich >=13.6.0',
   'typer >=0.9.0',
-  'xxhash >=3.4.1',
-  'blake3 >=0.3.3',
 ]
 
 [project.urls]
@@ -17,14 +15,14 @@ Home = "https://github.com/bwprog"
 
 [project.optional-dependencies]
 dev = [
-  'ruff >=0.1.1',
+  'ruff >=0.2',
 ]
 tests = [
   'pytest >=7.4.2',
 ]
 
 [tool.ruff]
-# Increase the maximum line length to 100 characters.
+# Increase the maximum line length to 120 characters.
 line-length = 120
 indent-width = 4
 # Exclude directories
@@ -40,6 +38,14 @@ exclude = [
 target-version = "py311"
 # show ruff performed fixes
 show-fixes = true
+
+[tool.ruff.format]
+# Prefer single quotes over double quotes.
+quote-style = "single"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+preview = true
 
 [tool.ruff.lint]
 # enforced rules
@@ -65,23 +71,15 @@ preview = true
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["D104"]
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Flag errors (`C901`) whenever the complexity level exceeds 5.
 max-complexity = 21
 
-[tool.ruff.format]
-# Prefer single quotes over double quotes.
-quote-style = "single"
-indent-style = "space"
-skip-magic-trailing-comma = false
-line-ending = "auto"
-preview = true
-
-[tool.ruff.flake8-quotes]
+[tool.ruff.lint.flake8-quotes]
 inline-quotes = "single"
 multiline-quotes = "single"
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 # Use Google-style docstrings.
 convention = "numpy"
 
